--- a/Source/Android/app/build.gradle
+++ b/Source/Android/app/build.gradle
@@ -21,12 +21,12 @@ android {
         // Flag to enable support for the new language APIs
         coreLibraryDesugaringEnabled true
 
-        sourceCompatibility = "11"
-        targetCompatibility = "11"
+        sourceCompatibility = "17"
+        targetCompatibility = "17"
     }
 
     kotlinOptions {
-        jvmTarget = '11'
+        jvmTarget = '17'
     }
 
     lint {
@@ -86,7 +86,7 @@ android {
     externalNativeBuild {
         cmake {
             path "../../../CMakeLists.txt"
-            version "3.18.1"
+            version "3.22.1"
         }
     }
     namespace 'org.dolphinemu.dolphinemu'
@@ -112,22 +112,24 @@ android {
 dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
 
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.exifinterface:exifinterface:1.3.6'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.6.0'
-    implementation 'androidx.fragment:fragment:1.5.5'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.6.1'
+    implementation 'androidx.fragment:fragment:1.6.0'
     implementation 'androidx.slidingpanelayout:slidingpanelayout:1.2.0'
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.core:core-splashscreen:1.0.0'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.core:core-splashscreen:1.0.1'
     implementation 'androidx.preference:preference:1.2.0'
-    implementation 'androidx.profileinstaller:profileinstaller:1.2.2'
+    implementation 'androidx.profileinstaller:profileinstaller:1.3.1'
 
     // Force dependency version to solve build conflict with androidx preferences
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
 
     // Android TV UI libraries.
     implementation 'androidx.leanback:leanback:1.0.0'
